--- a/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
@@ -195,7 +195,16 @@
                     <DataGridTemplateColumn SortMemberPath="Value" IsReadOnly="True" MinWidth="200">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Path=Value}" Margin="10" FontSize="14" TextAlignment="Center" FontFamily="Comic Sans MS"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <Icon:PackIconMaterial Visibility="{Binding Path=IsPeriodicDamage, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
+                                                   Kind="Delta" Foreground="Orange" Style="{StaticResource menuButtonIcon}" Width="10" Height="10" Margin="0"
+                                                   HorizontalAlignment="Center">
+                                        <Icon:PackIconMaterial.ToolTip>
+                                            Периодически урон
+                                        </Icon:PackIconMaterial.ToolTip>
+                                    </Icon:PackIconMaterial>
+                                    <TextBlock Text="{Binding Path=Value}" Margin="10" FontSize="14" TextAlignment="Center" FontFamily="Comic Sans MS"/>
+                                </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
@@ -210,49 +219,49 @@
                             <DataTemplate>
                                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsCrushing, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="ShieldAirplane" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="ShieldAirplane" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Сокрушительный урон
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsParry, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="SwordCross" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="SwordCross" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Парирование
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsDodge, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="StarCheck" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="StarCheck" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Уклонение
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsMiss, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="CallMissed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="CallMissed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Промах
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsImmune, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="CarLightDimmed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="CarLightDimmed" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Иммунитет
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsResist, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="Resistor" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="Resistor" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Сопротивления урону
                                         </Icon:PackIconMaterial.ToolTip>
                                     </Icon:PackIconMaterial>
                                     <Icon:PackIconMaterial Visibility="{Binding Path=IsAbsorb, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
-                                                   Grid.Column="0" Kind="Shield" Foreground="Black" Style="{StaticResource menuButtonIcon}"
+                                                   Kind="Shield" Foreground="Black" Style="{StaticResource menuButtonIcon}"
                                                    HorizontalAlignment="Center">
                                         <Icon:PackIconMaterial.ToolTip>
                                             Поглащение всего урона
@@ -276,7 +285,7 @@
                         </DataGridTemplateColumn.CellTemplate>
                         <DataGridTemplateColumn.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="Противник" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
+                                <TextBlock Text="Противник/Период. урон" Margin="5" TextAlignment="Center" FontSize="14" FontStyle="Oblique"  FontWeight="Bold"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
