--- a/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
@@ -123,7 +123,7 @@
                                    OnClick="{Binding ChatCommand}"/>
                 </StackPanel>
                 
-                <StackPanel Margin="10 15 0 0" VerticalAlignment="Bottom">
+                <StackPanel Margin="10 5 0 0" VerticalAlignment="Bottom">
                     <uc:MenuButton Title="Настройки" Icon="CogOutline" IsEnabled="False"/>
                     <uc:MenuButton OnClick="{Binding CloseCommand}" Title="Выход" Icon="Logout"/>
                 </StackPanel>
@@ -207,5 +207,11 @@
                 </StackPanel>
             </StackPanel>
         </Border>
+
+        <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Panel.ZIndex="3" Margin="5" Orientation="Horizontal">
+            <TextBlock Text="{Binding AppVersionType}" FontSize="13" Foreground="White"/>
+            <TextBlock Text="  " FontSize="13" Foreground="White"/>
+            <TextBlock Text="{Binding AppVersion}" FontSize="13" FontWeight="DemiBold" Foreground="White"/>
+        </StackPanel>
     </Grid>
 </views:MvxWpfView>
