--- a/businessCard/src/styles/aboutMeSkills.css
+++ b/businessCard/src/styles/aboutMeSkills.css
@@ -108,7 +108,8 @@
 }
 
 .about-me__skills li span .skill-level.active {
-    background: orange;
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
 .about-me__skills li span .skill-level .name {
