--- a/businessCard/src/styles/main.css
+++ b/businessCard/src/styles/main.css
@@ -8,7 +8,7 @@
 
 body {
     background: rgb(11,11,11);
-background: linear-gradient(90deg, rgba(11,11,11,1) 10%, rgba(209,209,209,1) 50%, rgba(0,0,0,1) 90%);
+    background: linear-gradient(90deg, rgba(11,11,11,1) 10%, rgba(209,209,209,1) 50%, rgba(0,0,0,1) 90%);
 }
 
 button {
@@ -443,9 +443,11 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 25px 0 75px 0;
+    padding: 25px 0 75px 0;
     color: white;
     font-family: Comic Sans MS;
+    background: rgb(219,109,109);
+    background: radial-gradient(circle, rgba(219,109,109,1) 0%, rgba(148,153,233,1) 100%);
 }
 
 .social-links__container {
