--- a/businessCard/src/styles/main.css
+++ b/businessCard/src/styles/main.css
@@ -9,6 +9,7 @@
 body {
     background: rgb(11,11,11);
     background: linear-gradient(90deg, rgba(11,11,11,1) 10%, rgba(209,209,209,1) 50%, rgba(0,0,0,1) 90%);
+    overflow-x: hidden;
 }
 
 button {
