--- a/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
@@ -62,7 +62,7 @@
                 <TextBlock Text="Источник" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            Margin="0" Width="100" Foreground="Gray"/>
                 <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding DamageTakenSources}"
-                          VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedDamageTakenSource}" SelectedIndex="0"/>
+                          VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
             </StackPanel>
         </StackPanel>
 
