--- a/src/CombatAnalysis.App/Views/Chat/CreateGroupChatView.xaml
+++ b/src/CombatAnalysis.App/Views/Chat/CreateGroupChatView.xaml
@@ -1,12 +1,11 @@
 ﻿<views:MvxWpfView
-    x:Class="CombatAnalysis.App.Views.CreateGroupChat.CreateGroupChatView"
+    x:Class="CombatAnalysis.App.Views.Chat.CreateGroupChatView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-    xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
     mc:Ignorable="d">
 
     <Grid>
