--- a/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
+++ b/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
@@ -1,11 +1,11 @@
 ﻿<views:MvxWpfView
-    x:Class="CombatAnalysis.App.Views.RegistrationView"
+    x:Class="CombatAnalysis.App.Views.User.RegistrationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
-    xmlns:local="clr-namespace:CombatAnalysis.App.Views"
+    xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
     xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
