--- a/src/CombatAnalysis.App/Windows/CreateGroupChatWindow.xaml
+++ b/src/CombatAnalysis.App/Windows/CreateGroupChatWindow.xaml
@@ -4,8 +4,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:CombatAnalysis.App.Views.CreateGroupChat"
-    xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels.CreateGroupChat;assembly=CombatAnalysis.Core"
+    xmlns:local="clr-namespace:CombatAnalysis.App.Views.Chat"
+    xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels.Chat;assembly=CombatAnalysis.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     mc:Ignorable="d" Title="CreateGroupChat" Height="550" Width="600" WindowStartupLocation="CenterScreen">
 
