--- a/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
+++ b/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
@@ -5,9 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
+    xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
+    xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.Registration"
     xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
     xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    loc:LocalizationObject.ResourceManager="{x:Static resx:Resource.ResourceManager}"
     mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
@@ -29,7 +32,7 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="Регистрация"/>
+        <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="{loc:Loc Title}"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -45,33 +48,33 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Email" FontSize="18" Margin="0 20"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="18" Margin="0 20"/>
                 <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Пароль" FontSize="18" Margin="0 20"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="18" Margin="0 20"/>
                 <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
                              PasswordChanged="PasswordBox_PasswordChanged"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Повторный пароль" FontSize="18" Margin="0 20"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordConfirmation}" FontSize="18" Margin="0 20"/>
                 <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
                              PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Необходмо указать данные для регистрации"
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc NeedAddData}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding InputDataIsEmpty, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Аккаунт с указаным Email уже существует"
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc EmailIsAlready}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding AccountIsReady, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Пароль должен совпадать с Повторным паролем"
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordNotConfirmated}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding ConfirmPasswordIsNotCorrect, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="Не удалось получить ответ от сервера. Возможно проблемы с подключением или сервер временно не доступен"
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="{loc:Loc RegistrationFailed}"
                            FontSize="12" Foreground="Brown" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
             </StackPanel>
-            <Button Grid.Column="1" Grid.Row="4" Height="30" Width="125" Content="Регистрация" Style="{StaticResource showButton}"
+            <Button Grid.Column="1" Grid.Row="4" Height="30" Width="125" Content="{loc:Loc Registration}" Style="{StaticResource showButton}"
                     Command="{Binding RegistrationCommand}" />
         </Grid>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="Назад" Style="{StaticResource showButton}"
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
                     Command="{Binding CancelCommand}" />
     </Grid>
 </views:MvxWpfView>
