Move save the all data to API

--- a/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
@@ -52,7 +52,7 @@
                 <TextBlock Text="{loc:Loc TypeOf}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            VerticalAlignment="Center" Margin="0" Width="100" Foreground="Gray"/>
                 <ComboBox Style="{DynamicResource ComboBoxStyle1}" VerticalAlignment="Center" Name="detailsType"
-                          Width="135" SelectedIndex="0">
+                          Width="135" SelectedIndex="{Binding DetailsTypeSelectedIndex}">
                     <ComboBoxItem Content="{loc:Loc Common}" IsSelected="True"/>
                     <ComboBoxItem Content="{loc:Loc MoreDetails}" />
                 </ComboBox>
@@ -63,7 +63,7 @@
             <StackPanel Orientation="Horizontal" Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
                 <TextBlock Text="{loc:Loc Source}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            Margin="0" Width="100" Foreground="Gray"/>
-                <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding DamageTakenSources}"
+                <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Sources}"
                           VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
             </StackPanel>
         </StackPanel>
@@ -71,7 +71,7 @@
         <StackPanel Grid.Row="2" Grid.Column="2" 
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid Margin="20 30 20 45" Height="450" VerticalAlignment="Top" Background="Transparent" 
-                      ItemsSource="{Binding DamageTakenGeneralInformations}" GridLinesVisibility="None" 
+                      ItemsSource="{Binding GeneralInformations}" GridLinesVisibility="None" 
                       CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
@@ -179,7 +179,7 @@
 
             <DataGrid Margin="20 10" Background="Transparent" Height="450" GridLinesVisibility="None" 
                       CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                      VerticalAlignment="Top" ItemsSource="{Binding DamageTakenInformations}">
+                      VerticalAlignment="Top" ItemsSource="{Binding DetailsInformations}">
                 <DataGrid.Columns>
                     <DataGridTemplateColumn SortMemberPath="Time" IsReadOnly="True" MinWidth="150">
                         <DataGridTemplateColumn.CellTemplate>
@@ -322,7 +322,6 @@
                 </DataGrid.RowDetailsTemplate>
             </DataGrid>
         </StackPanel>
-
 
         <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0 50"
                     Orientation="Horizontal">
