--- a/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/ResourceRecoveryDetailsView.xaml
@@ -51,7 +51,7 @@
                 <TextBlock Text="{loc:Loc TypeOf}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            VerticalAlignment="Center" Margin="0" Width="100" Foreground="Gray"/>
                 <ComboBox Style="{DynamicResource ComboBoxStyle1}" VerticalAlignment="Center" Name="detailsType"
-                          Width="135" SelectedIndex="0">
+                          Width="135" SelectedIndex="{Binding DetailsTypeSelectedIndex}">
                     <ComboBoxItem Content="{loc:Loc Common}" IsSelected="True"/>
                     <ComboBoxItem Content="{loc:Loc MoreDetails}" />
                 </ComboBox>
@@ -62,14 +62,14 @@
             <StackPanel Orientation="Horizontal" Visibility="{Binding IsShowFilters, Converter={StaticResource BoolToVisibility}, ConverterParameter=false}">
                 <TextBlock Text="{loc:Loc Source}" FontSize="15" TextAlignment="Center" Padding="10" FontWeight="SemiBold"
                            Margin="0" Width="100" Foreground="Gray"/>
-                <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding ResourceRecoverySources}"
+                <ComboBox Name="sortingProperty" Style="{DynamicResource ComboBoxStyle1}" ItemsSource="{Binding Sources}"
                           VerticalAlignment="Center" Width="210" SelectedItem="{Binding SelectedSource}" SelectedIndex="0"/>
             </StackPanel>
         </StackPanel>
 
         <DataGrid Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450" GridLinesVisibility="None" 
                       CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding ResourceRecoveryGeneralInformations}"
+                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding GeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <DataGrid.Columns>
                 <DataGridTemplateColumn SortMemberPath="SpellOrItem" IsReadOnly="True" MinWidth="175">
@@ -174,7 +174,7 @@
             
             <DataGrid Margin="20 10" Height="450" GridLinesVisibility="None" 
                       CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding ResourceRecoveryInformations}" 
+                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding DetailsInformations}" 
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
                 <DataGrid.Columns>
                     <DataGridTemplateColumn SortMemberPath="Time" IsReadOnly="True" MinWidth="150">
